# my-resume-chatbot

./: .gitignore  0__run_ingest.sh  1__run_backend.sh  API_SECURITY.md  DEPLOYMENT.md  LOCAL_SETUP.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  hr-questions-context.md  railway.toml  resume-chatbot-spec.md  vercel.json
ats-resume/: index.html
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/data/: hr-questions-context.md  personality.md  resume.md
backend/llm/: prompts.py  provider.py
backend/middleware/: contact_guard.py  global_cap.py  input_guard.py  rate_limiter.py
backend/models/: schemas.py
backend/rag/: chain.py  ingest.py  retriever.py
backend/services/: chat_logger.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AboutModal.tsx  AnimatedBorder.tsx  ChatWidget.tsx  ContactCard.tsx  ContactModal.tsx  MermaidDiagram.tsx  MessageBubble.tsx  RateLimitBadge.tsx  SourceBadge.tsx  SuggestedQuestions.tsx
frontend/src/data/: resume.json
frontend/src/hooks/: useChat.ts  useDarkMode.ts  useHealth.ts  useRateLimit.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AboutPage.tsx  ProjectsPage.tsx  ResumePage.tsx
frontend/src/utils/: deviconMap.ts
references/: hr-questions-context.md  mentored-projects.md  resume-chatbot-spec.md  skills-ratings.md
